open localization: update handback repo

--- a/ol-archive/dotnet/docs.pt-br/master/dotnet-core/global-json.bcf96f7f0bed50cf3a64cde9a9077d38563d8cfa.pt-br.xlf
+++ b/ol-archive/dotnet/docs.pt-br/master/dotnet-core/global-json.bcf96f7f0bed50cf3a64cde9a9077d38563d8cfa.pt-br.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="pt-br">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a6b0ad546a8a121ad5ea4642c11842a8dccf7055</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-b5c25fc" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">253b8642ae6fc5308d47552e9addfdbed6813ff1</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tools\global-json.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">96cc45597f72cf1c80da54cbb605842cd957e1eb</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2a8f2174aab354934a5b95c2ff83f1b9e433f436</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7e6a197d48d36afd9e27481eb050d264b5a63099</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">c6b92b256d0cd4b8d3d31a3b8407cd979045d1de</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -25,66 +25,27 @@
           <source>global.json reference</source>
           <target state="translated">Referência global.json</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source>This topic applies to .NET Core Tools Preview 2.</source>
-          <target state="translated">Este tópico se aplica à Visualização 2 das Ferramentas do .NET Core.</target>       </trans-unit>
+          <source>The global.json file allows selection of the .NET Core tools version being used through the <ph id="ph1">`sdk`</ph> property.</source>
+          <target state="translated">O arquivo global.json permite a seleção da versão das ferramentas do .NET Core usada por meio da propriedade <ph id="ph1">`sdk`</ph>.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
-          <source>For the .NET Core Tools RC4 version, see the <bpt id="p1">[</bpt>global.json reference (.NET Core Tools RC4)<ept id="p1">](../preview3/tools/global-json.md)</ept> topic.</source>
-          <target state="translated">Para a versão do Ferramentas do .NET Core RC4, consulte o tópico <bpt id="p1">[</bpt>Referência global.json (Ferramentas do .NET Core RC4)<ept id="p1">](../preview3/tools/global-json.md)</ept>.</target>       </trans-unit>
-        <trans-unit id="107" translate="yes" xml:space="preserve">
-          <source>The global.json file is used on .NET Core projects to define the solution metadata.</source>
-          <target state="translated">O arquivo global.json é usado em projetos do .NET Core para definir os metadados de solução.</target>       </trans-unit>
-        <trans-unit id="108" translate="yes" xml:space="preserve">
-          <source>This file is used when the <bpt id="p1">[</bpt>dotnet-restore<ept id="p1">](dotnet-restore.md)</ept> command is invoked to restore the dependencies of a .NET Core project.</source>
-          <target state="translated">Esse arquivo é usado quando o comando <bpt id="p1">[</bpt>dotnet-restore<ept id="p1">](dotnet-restore.md)</ept> é invocado para restaurar as dependências de um projeto do .NET Core.</target>       </trans-unit>
-        <trans-unit id="109" translate="yes" xml:space="preserve">
-          <source>In this reference topic, you'll see the list of the properties you can define in your global.json file.</source>
-          <target state="translated">Neste tópico de referência, a lista de todas as propriedades que podem ser definidas no arquivo project.json será apresentada.</target>       </trans-unit>
-        <trans-unit id="110" translate="yes" xml:space="preserve">
-          <source>projects</source>
-          <target state="translated">projetos</target>       </trans-unit>
-        <trans-unit id="111" translate="yes" xml:space="preserve">
-          <source>Type: String[]</source>
-          <target state="translated">Digite: String[]</target>       </trans-unit>
-        <trans-unit id="112" translate="yes" xml:space="preserve">
-          <source>Specifies which folders the build system should search for projects when resolving dependencies.</source>
-          <target state="translated">Especifica em quais pastas o sistema de build deve pesquisar os projetos ao resolver as dependências.</target>       </trans-unit>
-        <trans-unit id="113" translate="yes" xml:space="preserve">
-          <source>The build system will only search top-level child folders.</source>
-          <target state="translated">O sistema de build só pesquisará em pastas-filho de nível superior.</target>       </trans-unit>
-        <trans-unit id="114" translate="yes" xml:space="preserve">
-          <source>For example:</source>
-          <target state="translated">Por exemplo:</target>       </trans-unit>
-        <trans-unit id="115" translate="yes" xml:space="preserve">
-          <source>packages</source>
-          <target state="translated">pacotes</target>       </trans-unit>
-        <trans-unit id="116" translate="yes" xml:space="preserve">
-          <source>Type: String</source>
-          <target state="translated">Tipo: String</target>       </trans-unit>
-        <trans-unit id="117" translate="yes" xml:space="preserve">
-          <source>The location to store packages.</source>
-          <target state="translated">O local para armazenar pacotes.</target>       </trans-unit>
-        <trans-unit id="118" translate="yes" xml:space="preserve">
-          <source>For example:</source>
-          <target state="translated">Por exemplo:</target>       </trans-unit>
-        <trans-unit id="119" translate="yes" xml:space="preserve">
           <source>sdk</source>
           <target state="translated">sdk</target>       </trans-unit>
-        <trans-unit id="120" translate="yes" xml:space="preserve">
+        <trans-unit id="107" translate="yes" xml:space="preserve">
           <source>Type: Object</source>
           <target state="translated">Tipo: Object</target>       </trans-unit>
-        <trans-unit id="121" translate="yes" xml:space="preserve">
+        <trans-unit id="108" translate="yes" xml:space="preserve">
           <source>Specifies information about the SDK.</source>
           <target state="translated">Especifica informações sobre o SDK.</target>       </trans-unit>
-        <trans-unit id="122" translate="yes" xml:space="preserve">
+        <trans-unit id="109" translate="yes" xml:space="preserve">
           <source>version</source>
           <target state="translated">version</target>       </trans-unit>
-        <trans-unit id="123" translate="yes" xml:space="preserve">
+        <trans-unit id="110" translate="yes" xml:space="preserve">
           <source>Type: String</source>
           <target state="translated">Tipo: String</target>       </trans-unit>
-        <trans-unit id="124" translate="yes" xml:space="preserve">
+        <trans-unit id="111" translate="yes" xml:space="preserve">
           <source>The version of the SDK to use.</source>
           <target state="translated">A versão do SDK a ser usada.</target>       </trans-unit>
-        <trans-unit id="125" translate="yes" xml:space="preserve">
+        <trans-unit id="112" translate="yes" xml:space="preserve">
           <source>For example:</source>
           <target state="translated">Por exemplo:</target>       </trans-unit>
       </group>
