open localization: update handback repo

--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/choosing-core-framework-server.c95d5903df766b8dd579d8cca27c37110d59c853.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/choosing-core-framework-server.c95d5903df766b8dd579d8cca27c37110d59c853.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e23514daacb34739b26b7a31afea2ccb30296e79</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-6be57c5" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">816fb524000eb96ed5a157934cabc51b90f11dc0</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\standard\choosing-core-framework-server.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">1fa555fd5e444767120028ad72419fa3439a56d3</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2e6c27ce57971b73633f55f31ff15978a3669700</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">890335904acdb41d481a3fee451bdb1987d409bf</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6c236c1574516103062a14a55848ad98eb291c14</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -26,7 +26,7 @@
           <target state="translated">サーバー アプリ用 .NET Core と .NET Framework の選択</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
           <source>There are two supported choices of runtime for building server-side applications with .NET: .NET Framework and .NET Core.</source>
-          <target state="translated">.NET を使用してサーバー側のアプリケーションをビルドする場合に選択できるサポート対象ランタイムには、.NET Framework と .NET Core の 2 つがあります。</target>       </trans-unit>
+          <target state="translated">.NET を使用してサーバー側のアプリケーションをビルドする場合に選択できるサポート対象ランタイムには、.NET Framework と .NET Core の&amp;2; つがあります。</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>Both share a lot of the same .NET platform components and you can share code across the two.</source>
           <target state="translated">両方で同じ .NET プラットフォーム コンポーネントの多くが共有され、2 つの間でコードを共有することができます。</target>       </trans-unit>
@@ -133,7 +133,7 @@
           <source>You will be able to use the .NET Framework for Windows containers, but the modularity and lightweight nature of .NET Core makes it perfect for containers.</source>
           <target state="translated">Windows コンテナーで .NET Framework を使用できますが、モジュール性があり、軽量な .NET Core はコンテナーには最適です。</target>       </trans-unit>
         <trans-unit id="141" translate="yes" xml:space="preserve">
-          <source>When creating and deploying a container the size of its image is far smaller with .NET Core than .NET Framework.</source>
+          <source>When creating and deploying a container, the size of its image is far smaller with .NET Core than with .NET Framework.</source>
           <target state="translated">コンテナーを作成して展開する場合、そのイメージのサイズは .NET Framework より .NET Core の方がはるかに小さくなります。</target>       </trans-unit>
         <trans-unit id="142" translate="yes" xml:space="preserve">
           <source>Because it is cross-platform, you can deploy server apps to Linux Docker containers, for example.</source>
