--- a/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/library.387c1e6b222531c2cedef18135a5fa775d5f0452.ja-jp.xlf
+++ b/ol-archive/dotnet/docs.ja-jp/master/dotnet-core/library.387c1e6b222531c2cedef18135a5fa775d5f0452.ja-jp.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ja-jp">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-f0362aa" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">939c6dd0621e3b1121aca52915b04bf51af1d1ef</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-0ca64c3" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f681b1663d1a2e6c2fbbd1cc415290d26bbbe429</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\standard\library.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5d3751bcc277efa5f8873570b092ee0a17d378ec</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9ede7be590b77ca0a33a41fa496ae15456048033</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">8c08d27658e2db2dbd6fe5afccb2431803cf973d</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2847de0eec63ad39052abcbdc0909954491b729d</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -370,8 +370,8 @@
           <source>This dependency is required when referencing NuGet packages that contain profile-based PCLs.</source>
           <target state="translated">プロファイルベースの PCL を含む NuGet パッケージを参照するときに、この依存関係が必要です。</target>       </trans-unit>
         <trans-unit id="220" translate="yes" xml:space="preserve">
-          <source>Profile-based PCLs packaged as <ph id="ph1">`netstandard`</ph> are easier to consume than typically packaged profile-based PCLs in project.json.</source>
-          <target state="translated"><ph id="ph1">`netstandard`</ph> としてパッケージされたプロファイルベースの PCL は、project.json に通常パッケージされるプロファイルベースの PCL より使いやすくなります。</target>       </trans-unit>
+          <source>Profile-based PCLs packaged as <ph id="ph1">`netstandard`</ph> are easier to consume than typically packaged profile-based PCLs.</source>
+          <target state="translated"><ph id="ph1">`netstandard`</ph> としてパッケージされたプロファイルベースの PCL は、通常パッケージされるプロファイルベースの PCL より使いやすくなります。</target>       </trans-unit>
         <trans-unit id="221" translate="yes" xml:space="preserve">
           <source><ph id="ph1">`netstandard`</ph> packaging is compatible with existing users.</source>
           <target state="translated"><ph id="ph1">`netstandard`</ph> パッケージは、既存のユーザーと互換性があります。</target>       </trans-unit>
