open localization: update handback repo

--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/libraries-with-vs.00a7a4054bd2d8179615b9e121ed2b1265527de3.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/libraries-with-vs.00a7a4054bd2d8179615b9e121ed2b1265527de3.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a97c7fbefcab04ac817b77405755250079d6756b</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-b5c25fc" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">5a16067007fa5c21af8c0ec1201d5d94044f7f44</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tutorials\libraries-with-vs.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">82d9a2ca76a49274f3548547bfe3737216547b77</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a240ba3f220e9dd98861bef8833662fda2bfea6f</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f8359ef9cd1f118a6d9eb92db3ddda4654e00647</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">ec16806f0152fd4aeb33b2898acf34c614be8e37</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -19,8 +19,8 @@
           <source>Content moved!</source>
           <target state="translated">콘텐츠가 이동되었습니다.</target>       </trans-unit>
         <trans-unit id="103" translate="yes" xml:space="preserve">
-          <source>This article has moved to the <bpt id="p1">[</bpt>Building a class library with C# and .NET Core in Visual Studio 2017 RC<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept> topic.</source>
-          <target state="translated">이 문서는 <bpt id="p1">[</bpt>Visual Studio 2017 RC에서 C# 및 .NET Core로 클래스 라이브러리 빌드<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept> 항목으로 이동되었습니다.</target>       </trans-unit>
+          <source>This article has moved to the <bpt id="p1">[</bpt>Building a class library with C# and .NET Core in Visual Studio 2017<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept> topic.</source>
+          <target state="translated">이 문서는 <bpt id="p1">[</bpt>Visual Studio 2017에서 C# 및 .NET Core로 클래스 라이브러리 빌드<ept id="p1">](../../csharp/getting-started/library-with-visual-studio-2017.md)</ept> 항목으로 이동되었습니다.</target>       </trans-unit>
       </group>
     </body>
   </file>
