--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/libraries.9cfbfeb7612cd8533c4ca1fee0c3e06739154905.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/libraries.9cfbfeb7612cd8533c4ca1fee0c3e06739154905.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-47f9650" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">7f419e1fc2c9f442b08e19ede4e84f9cf6843a94</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-b5c25fc" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">94b6d965c7a39a02723b641f6551e54dd4df1f07</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\tutorials\libraries.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">bba53f51d7d51d38793fe3256e910d735adfe83d</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cc2affac42c561e4630e4e5f6d52ededbb77a46e</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2a755bae05a3ec15c08d535a5778116d3b7dd721</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">814cfaecad2106602819a1dc90161d283a2405cf</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -25,8 +25,8 @@
           <source>Developing Libraries with Cross Platform Tools</source>
           <target state="translated">플랫폼 간 도구로 라이브러리 개발</target>       </trans-unit>
         <trans-unit id="105" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">**</bpt>Some details are subject to change as the toolchain evolves.<ept id="p1">**</ept></source>
-          <target state="translated"><bpt id="p1">**</bpt>도구 체인이 발전함에 따라 몇 가지 세부 정보는 변경될 수 있습니다.<ept id="p1">**</ept></target>       </trans-unit>
+          <source>This topic hasn't been updated to the latest version of the tooling yet.</source>
+          <target state="translated">이 항목은 최신 버전의 도구로 아직 업데이트되지 않았습니다.</target>       </trans-unit>
         <trans-unit id="106" translate="yes" xml:space="preserve">
           <source>This article covers how to write libraries for .NET using cross-platform CLI tools.</source>
           <target state="translated">이 문서에서는 플랫폼 간 CLI 도구를 사용하여 .NET용 라이브러리를 작성하는 방법을 다룹니다.</target>       </trans-unit>
