--- a/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/windows-prerequisites.8a7e42c4e05f933f36694fb44fe90ca4e73ec886.ko-kr.xlf
+++ b/ol-archive/dotnet/docs.ko-kr/master/dotnet-core/windows-prerequisites.8a7e42c4e05f933f36694fb44fe90ca4e73ec886.ko-kr.xlf
@@ -2,13 +2,13 @@
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="ko-kr">
     <header>
-      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-188fee3" tool-company="Microsoft" />
-      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">b5c088da7d1155414a08995ae0d72154af891190</xliffext:olfilehash>
+      <tool tool-id="mdxliff" tool-name="mdxliff" tool-version="1.0-0ca64c3" tool-company="Microsoft" />
+      <xliffext:olfilehash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">6383a0ce253f6f7000ed8a81b29b9e1d58914acc</xliffext:olfilehash>
       <xliffext:olfilepath xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">docs\core\windows-prerequisites.md</xliffext:olfilepath>
       <xliffext:oltranslationpriority xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">dotnet-core</xliffext:oltranslationpriority>
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Human Translation</xliffext:oltranslationtype>
-      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">e2c0ee181bdb25ec35abcdc152cc273baf44414b</xliffext:olskeletonhash>
-      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">9a0b1e56caf5bdd655a8a0734875a3c5b17e0d6e</xliffext:olxliffhash>
+      <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">2d3b236a3d438e8a2d16e1ec92b87fb9c1c3de26</xliffext:olskeletonhash>
+      <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">aaf4ee8343280dd9bdee3ba971fd998f2ac5aa40</xliffext:olxliffhash>
     </header>
     <body>
       <group id="content" extype="content">
@@ -76,116 +76,29 @@
           <source>Make sure that your Windows installation is up-to-date and includes hotfix <bpt id="p1">[</bpt>KB2533623<ept id="p1">](https://support.microsoft.com/en-us/kb/2533623)</ept> installed through Windows Update.</source>
           <target state="translated">설치된 Windows가 최신 버전이며 Windows 업데이트를 통해 설치된 핫픽스 <bpt id="p1">[</bpt>KB2533623<ept id="p1">](https://support.microsoft.com/en-us/kb/2533623)</ept>이 포함되어 있는지 확인하세요.</target>       </trans-unit>
         <trans-unit id="122" translate="yes" xml:space="preserve">
-          <source>Prerequisites with Visual Studio</source>
-          <target state="translated">Visual Studio 필수 구성 요소</target>       </trans-unit>
+          <source>Prerequisites with Visual Studio 2017</source>
+          <target state="translated">Visual Studio 2017 필수 구성 요소</target>       </trans-unit>
         <trans-unit id="123" translate="yes" xml:space="preserve">
           <source>You can use any editor of your choice to develop .NET Core applications using the .NET Core SDK.</source>
           <target state="translated">.NET Core SDK를 사용하여 .NET Core 응용 프로그램을 개발할 수 있도록 원하는 편집기를 사용할 수 있습니다.</target>       </trans-unit>
         <trans-unit id="124" translate="yes" xml:space="preserve">
-          <source>However, if you want to develop .NET Core applications on Windows using Visual Studio, there are two versions you can use:</source>
-          <target state="translated">그러나 Visual Studio를 사용하여 Windows에서 .NET Core 응용 프로그램을 개발하려는 경우 두 가지 버전을 사용할 수 있습니다.</target>       </trans-unit>
+          <source>However, if you want to develop .NET Core applications on Windows in an integrated development environment, you can use <bpt id="p1">[</bpt>Visual Studio 2017<ept id="p1">](#visual-studio-2017)</ept>.</source>
+          <target state="translated">그러나 통합 개발 환경의 Windows에서 .NET Core 응용 프로그램을 개발하려는 경우 <bpt id="p1">[</bpt>Visual Studio 2017<ept id="p1">](#visual-studio-2017)</ept>을 사용할 수 있습니다.</target>       </trans-unit>
         <trans-unit id="125" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Visual Studio 2015<ept id="p1">](#visual-studio-2015)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio 2015<ept id="p1">](#visual-studio-2015)</ept></target>       </trans-unit>
+          <source>To use Visual Studio 2017 to develop .NET Core apps, you'll need to have the latest version of Visual Studio installed with the <bpt id="p1">**</bpt>.NET Core cross-platform development<ept id="p1">**</ept> toolset (in the <bpt id="p2">**</bpt>Other Toolsets<ept id="p2">**</ept> section) selected.</source>
+          <target state="translated">Visual Studio 2017을 사용하여 .NET Core 앱을 개발하려면 <bpt id="p1">**</bpt>.NET Core 플랫폼 간 개발<ept id="p1">**</ept> 도구 집합(<bpt id="p2">**</bpt>기타 도구 집합<ept id="p2">**</ept> 섹션)을 선택하여 최신 버전의 Visual Studio를 설치해야 합니다.</target>       </trans-unit>
         <trans-unit id="126" translate="yes" xml:space="preserve">
-          <source><bpt id="p1">[</bpt>Visual Studio 2017 RC<ept id="p1">](#visual-studio-2017-rc)</ept></source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio 2017 RC<ept id="p1">](#visual-studio-2017-rc)</ept></target>       </trans-unit>
+          <source>There are different editions of Visual Studio 2017.</source>
+          <target state="translated">여러 버전의 Visual Studio 2017이 있습니다.</target>       </trans-unit>
         <trans-unit id="127" translate="yes" xml:space="preserve">
-          <source>Projects created with Visual Studio 2015 will be project.json-based by default while projects created with Visual Studio 2017 RC will always be MSBuild-based.</source>
-          <target state="translated">Visual Studio 2015를 사용하여 만든 프로젝트는 기본적으로 project.json 기반이지만 Visual Studio 2017 RC를 사용하여 만든 프로젝트는 항상 MSBuild 기반이 됩니다.</target>       </trans-unit>
+          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2017<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017/#downloadvs)</ept> for free to get started.</source>
+          <target state="translated"><bpt id="p1">[</bpt>Visual Studio Community 2017<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017/#downloadvs)</ept>을 무료로 다운로드하여 시작할 수 있습니다.</target>       </trans-unit>
         <trans-unit id="128" translate="yes" xml:space="preserve">
-          <source>For more information about the format changes, see <bpt id="p1">[</bpt>High-level overview of changes<ept id="p1">](./preview3/tools/layering.md)</ept>.</source>
-          <target state="translated">형식 변경에 대한 자세한 내용은 <bpt id="p1">[</bpt>변경 내용의 대략적인 개요<ept id="p1">](./preview3/tools/layering.md)</ept>를 참조하세요.</target>       </trans-unit>
+          <source>To learn more about the Visual Studio installation process, see <bpt id="p1">[</bpt>Install Visual Studio 2017<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>.</source>
+          <target state="translated">Visual Studio 설치 프로세스에 대한 자세한 내용은 <bpt id="p1">[</bpt>Visual Studio 2017 설치<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>를 참조하세요.</target>       </trans-unit>
         <trans-unit id="129" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2015</source>
-          <target state="translated">Visual Studio 2015</target>       </trans-unit>
-        <trans-unit id="130" translate="yes" xml:space="preserve">
-          <source>If you want to use Visual Studio 2015 to develop .NET Core apps, you'll need:</source>
-          <target state="translated">.NET Core 앱을 개발하기 위해 Visual Studio 2015를 사용하려는 경우 다음이 필요합니다.</target>       </trans-unit>
-        <trans-unit id="131" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2015 Update 3.3 or later.</source>
-          <target state="translated">Visual Studio 2015 업데이트 3.3 이상</target>       </trans-unit>
-        <trans-unit id="132" translate="yes" xml:space="preserve">
-          <source>There are different <bpt id="p1">[</bpt>editions<ept id="p1">](https://www.visualstudio.com/vs/compare)</ept> of Visual Studio 2015.</source>
-          <target state="translated">여러 <bpt id="p1">[</bpt>버전<ept id="p1">](https://www.visualstudio.com/vs/compare)</ept>의 Visual Studio 2015가 있습니다.</target>       </trans-unit>
-        <trans-unit id="133" translate="yes" xml:space="preserve">
-          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2015<ept id="p1">](https://www.visualstudio.com/downloads/)</ept> for free to get started.</source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio Community 2015<ept id="p1">](https://www.visualstudio.com/downloads/)</ept>를 무료로 다운로드하여 시작할 수 있습니다.</target>       </trans-unit>
-        <trans-unit id="134" translate="yes" xml:space="preserve">
-          <source>To verify that you're running <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>, do the following:</source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio 2015 업데이트 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>을 실행 중인지 확인하려면 다음을 수행하세요.</target>       </trans-unit>
-        <trans-unit id="135" translate="yes" xml:space="preserve">
-          <source>On the <bpt id="p1">**</bpt>Help<ept id="p1">**</ept> menu, choose <bpt id="p2">**</bpt>About Microsoft Visual Studio<ept id="p2">**</ept>.</source>
-          <target state="translated"><bpt id="p1">**</bpt>도움말<ept id="p1">**</ept> 메뉴에서 <bpt id="p2">**</bpt>Microsoft Visual Studio 정보<ept id="p2">**</ept>를 선택합니다.</target>       </trans-unit>
-        <trans-unit id="136" translate="yes" xml:space="preserve">
-          <source>In the <bpt id="p1">**</bpt>About Microsoft Visual Studio<ept id="p1">**</ept> dialog, the version number should be 14.0.25424.00 or higher, and include "Update 3".</source>
-          <target state="translated"><bpt id="p1">**</bpt>Microsoft Visual Studio 정보<ept id="p1">**</ept> 대화 상자에서 버전 번호가 14.0.25424.00 이상이어야 하며, "업데이트 3"을 포함해야 합니다.</target>       </trans-unit>
-        <trans-unit id="137" translate="yes" xml:space="preserve">
-          <source>If you don't have Update 3, you first need to download and install <bpt id="p1">[</bpt>Visual Studio 2015 Update 3<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>.</source>
-          <target state="translated">업데이트 3이 없으면 먼저 <bpt id="p1">[</bpt>Visual Studio 2015 업데이트 3<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>을 다운로드 및 설치해야 합니다.</target>       </trans-unit>
-        <trans-unit id="138" translate="yes" xml:space="preserve">
-          <source>If you have Update 3 but the version number is smaller than 14.0.25424.00, you need to download and install <bpt id="p1">[</bpt>Visual Studio 2015 Update 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>.</source>
-          <target state="translated">업데이트 3이 있지만 버전 번호가 14.0.25424.00보다 작은 경우 <bpt id="p1">[</bpt>Visual Studio 2015 업데이트 3.3<ept id="p1">](https://msdn.microsoft.com/library/mt752379.aspx)</ept>을 다운로드 및 설치해야 합니다.</target>       </trans-unit>
-        <trans-unit id="139" translate="yes" xml:space="preserve">
-          <source>You can read more about the changes in Update 3 in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>.</source>
-          <target state="translated"><bpt id="p1">[</bpt>릴리스 정보<ept id="p1">](https://www.visualstudio.com/news/releasenotes/vs2015-update3-vs)</ept>에서 업데이트 3의 변경 내용에 대해 자세히 알아볼 수 있습니다.</target>       </trans-unit>
-        <trans-unit id="140" translate="yes" xml:space="preserve">
-          <source>NuGet Manager extension for Visual Studio</source>
-          <target state="translated">Visual Studio용 NuGet Manager 확장</target>       </trans-unit>
-        <trans-unit id="141" translate="yes" xml:space="preserve">
-          <source>NuGet is the package manager for the Microsoft development platform including .NET Core.</source>
-          <target state="translated">NuGet은 .NET Core를 포함한 Microsoft 개발 플랫폼에 대한 패키지 관리자입니다.</target>       </trans-unit>
-        <trans-unit id="142" translate="yes" xml:space="preserve">
-          <source>You need <bpt id="p1">[</bpt>NuGet 3.5.0-beta<ept id="p1">](https://dist.nuget.org/visualstudio-2015-vsix/v3.5.0-beta/NuGet.Tools.vsix)</ept> or higher to build .NET Core apps.</source>
-          <target state="translated">.NET Core 앱을 빌드하려면 <bpt id="p1">[</bpt>NuGet 3.5.0-beta<ept id="p1">](https://dist.nuget.org/visualstudio-2015-vsix/v3.5.0-beta/NuGet.Tools.vsix)</ept> 이상이 필요합니다.</target>       </trans-unit>
-        <trans-unit id="143" translate="yes" xml:space="preserve">
-          <source>.NET Core Tooling Preview 2</source>
-          <target state="translated">.NET Core Tooling Preview 2</target>       </trans-unit>
-        <trans-unit id="144" translate="yes" xml:space="preserve">
-          <source>Download and install the <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>.</source>
-          <target state="translated"><bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>를 다운로드하여 설치합니다.</target>       </trans-unit>
-        <trans-unit id="145" translate="yes" xml:space="preserve">
-          <source>The .NET Core Tooling package installs .NET Core, project templates and other tools for Visual Studio 2015.</source>
-          <target state="translated">.NET Core 도구 패키지는 Visual Studio 2015용 .NET Core, 프로젝트 템플릿 및 기타 도구를 설치합니다.</target>       </trans-unit>
-        <trans-unit id="146" translate="yes" xml:space="preserve">
-          <source>Currently, you cannot download an offline installer for <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>.</source>
-          <target state="translated">지금은 <bpt id="p1">[</bpt>.NET Core 1.0.1 - VS 2015 Tooling Preview 2<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>용 오프라인 설치 관리자를 다운로드할 수 없습니다.</target>       </trans-unit>
-        <trans-unit id="147" translate="yes" xml:space="preserve">
-          <source>Instead, you have to download the <bpt id="p1">[</bpt>regular bootstrapper<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept> and run it with a command-line option (such as, <ph id="ph1">`/layout c:\path`</ph>) to get an offline layout.</source>
-          <target state="translated">오프라인 레이아웃을 이용하려면 대신 <bpt id="p1">[</bpt>일반 부트스트래퍼<ept id="p1">]</ept><bpt id="p2">[</bpt><ept id="p2">sdk]</ept>를 다운로드하고 명령줄 옵션(예: <ph id="ph1">`/layout c:\path`</ph>)과 함께 실행해야 합니다.</target>       </trans-unit>
-        <trans-unit id="148" translate="yes" xml:space="preserve">
-          <source>After that, it can be used as an offline installer: just run the executable from the local path.</source>
-          <target state="translated">그런 다음 오프라인 설치 관리자로 사용할 수 있습니다. 로컬 경로에서 바로 실행 파일을 실행합니다.</target>       </trans-unit>
-        <trans-unit id="149" translate="yes" xml:space="preserve">
-          <source>Notice that because it's a full layout, this procedure downloads all the packages for all supported languages, which is around 1 GB in size.</source>
-          <target state="translated">이 절차는 전체 레이아웃이므로 지원되는 모든 언어의 모든 패키지를 다운로드하며 크기는 약 1GB입니다.</target>       </trans-unit>
-        <trans-unit id="150" translate="yes" xml:space="preserve">
-          <source>Visual Studio 2017 RC</source>
-          <target state="translated">Visual Studio 2017 RC</target>       </trans-unit>
-        <trans-unit id="151" translate="yes" xml:space="preserve">
-          <source>If you want to use Visual Studio 2017 RC to develop .NET Core apps, you'll need to have the latest version of Visual Studio RC installed with the ".NET Core and Docker (Preview)" workload selected.</source>
-          <target state="translated">.NET Core 앱을 개발하기 위해 Visual Studio 2017 RC를 사용하려는 경우 선택한 ".NET Core and Docker (Preview)" 워크로드를 사용하여 최신 버전의 Visual Studio RC를 설치해야 합니다.</target>       </trans-unit>
-        <trans-unit id="152" translate="yes" xml:space="preserve">
-          <source>There are different editions of Visual Studio 2017 RC.</source>
-          <target state="translated">여러 버전의 Visual Studio 2017 RC가 있습니다.</target>       </trans-unit>
-        <trans-unit id="153" translate="yes" xml:space="preserve">
-          <source>You can download <bpt id="p1">[</bpt>Visual Studio Community 2017 RC<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017-rc/#downloadvs)</ept> for free to get started.</source>
-          <target state="translated"><bpt id="p1">[</bpt>Visual Studio Community 2017 RC<ept id="p1">](https://www.visualstudio.com/vs/visual-studio-2017-rc/#downloadvs)</ept>는 무료로 다운로드하여 시작할 수 있습니다.</target>       </trans-unit>
-        <trans-unit id="154" translate="yes" xml:space="preserve">
-          <source>To learn more about the Visual Studio installation process, see <bpt id="p1">[</bpt>Install Visual Studio 2017 RC<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>.</source>
-          <target state="translated">Visual Studio 설치 프로세스에 대한 자세한 내용은 <bpt id="p1">[</bpt>Visual Studio 2017 RC 설치<ept id="p1">](https://docs.microsoft.com/en-us/visualstudio/install/install-visual-studio)</ept>를 참조하세요.</target>       </trans-unit>
-        <trans-unit id="155" translate="yes" xml:space="preserve">
-          <source>To verify that you're running the latest version of Visual Studio 2017 RC, do the following:</source>
-          <target state="translated">최신 버전의 Visual Studio 2017 RC를 실행 중인지 확인하려면 다음을 수행합니다.</target>       </trans-unit>
-        <trans-unit id="156" translate="yes" xml:space="preserve">
-          <source>On the <bpt id="p1">**</bpt>Help<ept id="p1">**</ept> menu, choose <bpt id="p2">**</bpt>About Microsoft Visual Studio<ept id="p2">**</ept>.</source>
-          <target state="translated"><bpt id="p1">**</bpt>도움말<ept id="p1">**</ept> 메뉴에서 <bpt id="p2">**</bpt>Microsoft Visual Studio 정보<ept id="p2">**</ept>를 선택합니다.</target>       </trans-unit>
-        <trans-unit id="157" translate="yes" xml:space="preserve">
-          <source>In the <bpt id="p1">**</bpt>About Microsoft Visual Studio<ept id="p1">**</ept> dialog, the version number should be 15.0.26020.0 or higher.</source>
-          <target state="translated"><bpt id="p1">**</bpt>Microsoft Visual Studio 정보<ept id="p1">**</ept> 대화 상자에서 버전 번호가 15.0.26020.0 이상이어야 합니다.</target>       </trans-unit>
-        <trans-unit id="158" translate="yes" xml:space="preserve">
-          <source>You can read more about the changes in Visual Studio 2017 RC in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>.</source>
-          <target state="translated"><bpt id="p1">[</bpt>릴리스 정보<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>에서 Visual Studio 2017 RC의 변경 내용에 대해 자세히 알아볼 수 있습니다.</target>       </trans-unit>
+          <source>You can read more about the changes in Visual Studio 2017 in the <bpt id="p1">[</bpt>release notes<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>.</source>
+          <target state="translated"><bpt id="p1">[</bpt>릴리스 정보<ept id="p1">](https://www.visualstudio.com/en-us/news/releasenotes/vs2017-relnotes)</ept>에서 Visual Studio 2017의 변경 내용에 대해 자세히 알아볼 수 있습니다.</target>       </trans-unit>
       </group>
     </body>
   </file>
