--- a/ol-poison/dotnet/docs.it-it/master/vbcs/lo-mt_walkthrough-embedding-types-from-managed-assemblies-in-vs.2a061fb3caf5fe2b156828a9d7742dae12083cce.it-it.xlf
+++ b/ol-poison/dotnet/docs.it-it/master/vbcs/lo-mt_walkthrough-embedding-types-from-managed-assemblies-in-vs.2a061fb3caf5fe2b156828a9d7742dae12083cce.it-it.xlf
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
@@ -9,6 +9,7 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Machine Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">cbd4d830944ba574d2c187645a5558884d4b90a3</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">85ac426a23cdea773199adc3f21123f93da0beda</xliffext:olxliffhash>
+      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Handback file name: lo-mt_walkthrough-embedding-types-from-managed-assemblies-in-vs.2a061fb3caf5fe2b156828a9d7742dae12083cce.it-it is different with handoff file name: walkthrough-embedding-types-from-managed-assemblies-in-vs.2a061fb3caf5fe2b156828a9d7742dae12083cce.it-it.</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
