--- a/ol-poison/dotnet/docs.it-it/master/vbcs/lo-mt_virtual-mode-in-the-datarepeater-control-visual-studio.77eafd8aebda24107df35ded439fcc6ddf2bb2f5.it-it.xlf
+++ b/ol-poison/dotnet/docs.it-it/master/vbcs/lo-mt_virtual-mode-in-the-datarepeater-control-visual-studio.77eafd8aebda24107df35ded439fcc6ddf2bb2f5.it-it.xlf
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <xliff xmlns="urn:oasis:names:tc:xliff:document:1.2" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="1.2" xsi:schemaLocation="urn:oasis:names:tc:xliff:document:1.2 xliff-core-1.2-transitional.xsd">
   <file datatype="xml" original="markdown" source-language="en-US" target-language="it-it">
     <header>
@@ -9,6 +9,7 @@
       <xliffext:oltranslationtype xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Machine Translation</xliffext:oltranslationtype>
       <xliffext:olskeletonhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">f97a847f6afc0d42cf7439e05865348d91cb79ef</xliffext:olskeletonhash>
       <xliffext:olxliffhash xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">a9b5ca7a6c0de64fd0d7a765c89702634041fbb0</xliffext:olxliffhash>
+      <xliffext:poisonError xmlns:xliffext="urn:microsoft:content:schema:xliffextensions">Handback file name: lo-mt_virtual-mode-in-the-datarepeater-control-visual-studio.77eafd8aebda24107df35ded439fcc6ddf2bb2f5.it-it is different with handoff file name: virtual-mode-in-the-datarepeater-control-visual-studio.77eafd8aebda24107df35ded439fcc6ddf2bb2f5.it-it.</xliffext:poisonError>
     </header>
     <body>
       <group id="content" extype="content">
